New Record Country and stream methods to collecting data